hphp/test/zend/bad/ext/standard/tests/streams/bug64433.php.skipif
<?php
if(!file_exists(dirname(__FILE__)."/../../../../sapi/cli/tests/php_cli_server.inc")) 
	die("skip could not found cli server script");
$res = @include dirname(__FILE__)."/../../../../sapi/cli/tests/php_cli_server.inc";
if(!$res) {
	die("skip could not open cli server script");
}

if (CURL_WRAPPERS_ENABLED) {
	die("skip curl wrappers used");
}
?>